feat: use nicer fonts

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,10 +1,11 @@
 <?xml version='1.0'?>
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
+<!-- Run `fc-match -a` to see all available options -->
 <fontconfig>
 	<alias>
 		<family>serif</family>
 		<prefer>
-			<family>Linux Libertine</family>
+			<family>FreeSerif</family>
 			<family>Joy Pixels</family>
 			<family>Noto Color Emoji</family>
 		</prefer>
@@ -12,7 +13,7 @@
 	<alias>
 		<family>sans-serif</family>
 		<prefer>
-			<family>Linux Biolinum</family>
+			<family>FreeSans</family>
 			<family>Joy Pixels</family>
 			<family>Noto Color Emoji</family>
 		</prefer>
@@ -20,7 +21,7 @@
 	<alias>
 		<family>sans</family>
 		<prefer>
-			<family>Linux Biolinum</family>
+			<family>NotoSans Nerd Font</family>
 			<family>Joy Pixels</family>
 			<family>Noto Color Emoji</family>
 		</prefer>
@@ -28,7 +29,7 @@
 	<alias>
 		<family>monospace</family>
 		<prefer>
-			<family>Noto Sans Mono</family>
+			<family>UbuntuMono Nerd Font Mono</family>
 			<family>Liberation Mono</family>
 			<family>Braille</family>
 		</prefer>
