feat: hide scrollbar in vscode

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -8,6 +8,7 @@
     "editor.fontFamily": "Source Code Pro, monospace",
     "editor.fontSize": 13,
     "editor.lineHeight": 19,
+    "editor.scrollbar.verticalScrollbarSize": 0,
     "editor.renderWhitespace": "all",
     "editor.minimap.enabled": false,
     "editor.minimap.side": "right",
